Refactor the services. And create unit tests for the RecipeService.class